fixed wayfinder on small screen so can see easier (overline rather than border)

--- a/finalproject/styles/large.css
+++ b/finalproject/styles/large.css
@@ -24,6 +24,17 @@
     border: none;
   }
 
+  .navigation a:hover {
+    border-top: solid 1px var(--black-text);
+    text-decoration: none;
+  }
+
+    /* below: wayfinding effect-light grey background for a li element with a class of "current" */
+    .navigation li.current a {
+      border-top: solid 1px var(--black-text);
+      text-decoration: none;
+    }
+
   /* --------------------20 MAINSECTION -------------------- */
   .main-page,
   nav {
