--- a/finalproject/styles/small.css
+++ b/finalproject/styles/small.css
@@ -115,12 +115,12 @@ header span {
 }
 
 .navigation a:hover {
-  border-top: solid 1px var(--black-text);
+  text-decoration: overline;
 }
 
 /* below: wayfinding effect-light grey background for a li element with a class of "current" */
 .navigation li.current a {
-  border-top: solid 1px var(--black-text);
+  text-decoration: overline;
 }
 
 
